--- a/client/index.html
+++ b/client/index.html
@@ -4,18 +4,22 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="assets/style.css">
+    <script defer src="assets/script.js"></script>
+    <title>Google</title>
 </head>
 <body>
-    <section>
+    <section class="center">
     <div>
         <img src="assets/images/Google-logo-768x432.png" alt="Googlelogo">
     </div>
-    <input type="text" placeholder="Search">
-    <button type="submit">Google Search
+    <form>
+    <input type="text" placeholder="Search" required>
+    <div><button class = "button" type="submit">Google Search
     </button> 
-    <button type="submit">I'm Feeling Lucky</button>
+    <a href='https:www.google.com'><button type="button">I'm Feeling Lucky</button></a>
+    </div>
+    </form>
     </section>
-    
 </body>
 </html>
