--- a/client/index.html
+++ b/client/index.html
@@ -1,25 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="assets/style.css">
-    <script defer src="assets/script.js"></script>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="assets/style.css" />
+    <script defer src="assets/index.js"></script>
     <title>Google</title>
-</head>
-<body>
+  </head>
+  <body>
     <section class="center">
-    <div>
-        <img src="assets/images/Google-logo-768x432.png" alt="Googlelogo">
-    </div>
-    <form>
-    <input type="text" placeholder="Search" required>
-    <div><button class = "button" type="submit">Google Search
-    </button> 
-    <a href='https:www.google.com'><button type="button">I'm Feeling Lucky</button></a>
-    </div>
-    </form>
+      <div>
+        <img src="assets/images/Google-logo-768x432.png" alt="Googlelogo" />
+      </div>
+      <form class="btn-test">
+        <input type="text" placeholder="Search" required />
+        <div>
+          <button class="button" type="submit">Google Search</button>
+          <a href="https:www.google.com"
+            ><button type="button">I'm Feeling Lucky</button></a
+          >
+        </div>
+      </form>
     </section>
-</body>
+
+    <section class="results-container"></section>
+  </body>
 </html>
