--- a/client/searchResults.html
+++ b/client/searchResults.html
@@ -7,7 +7,7 @@
     <title>Document</title>
   </head>
   <body>
-    <section class="results-container">
+    <!-- <section class="results-container">
       <div class="result-link-container">
         <a class="result-link" href=""></a>
       </div>
@@ -15,6 +15,6 @@
         <p class="result-desc"><a class="result-link" href=""></a></p>
       </div>
       <div class="result-info-container"><p class="result-info"></p></div>
-    </section>
+    </section> -->
   </body>
 </html>
