--- a/client/index.html
+++ b/client/index.html
@@ -6,15 +6,32 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="assets/style.css" />
     <script defer src="assets/index.js"></script>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
+      crossorigin="anonymous"
+    />
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+      crossorigin="anonymous"
+    ></script>
     <title>Google</title>
   </head>
   <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
       <div class="container-fluid">
         <a class="navbar-brand" href="#">About</a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#navbarText"
+          aria-controls="navbarText"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarText">
@@ -32,32 +49,68 @@
               <a class="nav-link" href="https://www.google.com/mail">Gmail</a>
             </li>
             <li class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+              <a
+                class="nav-link dropdown-toggle"
+                href="#"
+                id="navbarDropdownMenuLink"
+                role="button"
+                data-bs-toggle="dropdown"
+                aria-expanded="false"
+              >
                 More
               </a>
-              <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                <li><a class="dropdown-item" href="https://www.youtube.com/">Youtube</a></li>
-                <li><a class="dropdown-item" href="https://news.google.com/">News</a></li>
-                <li><a class="dropdown-item" href="https://store.google.com/">Store</a></li>
+              <ul
+                class="dropdown-menu"
+                aria-labelledby="navbarDropdownMenuLink"
+              >
+                <li>
+                  <a class="dropdown-item" href="https://www.youtube.com/"
+                    >Youtube</a
+                  >
+                </li>
+                <li>
+                  <a class="dropdown-item" href="https://news.google.com/"
+                    >News</a
+                  >
+                </li>
+                <li>
+                  <a class="dropdown-item" href="https://store.google.com/"
+                    >Store</a
+                  >
+                </li>
               </ul>
             </li>
           </ul>
-          <span class="navbar-text">
-            Sign in
-          </span>
+          <span class="navbar-text"> Sign in </span>
         </div>
       </div>
     </nav>
     <section class="center">
       <div>
-        <img class="googleLogo" src="assets/images/Google-logo-768x432.png" alt="Googlelogo" />
+        <img
+          class="googleLogo"
+          src="assets/images/Google-logo-768x432.png"
+          alt="Googlelogo"
+        />
       </div>
       <form class="btn-test">
-        <input type="text" placeholder="Search" required />
-        <div>
+        <div class="input-container">
+          <img class="mic-svg" src="assets/mic.png" alt=" microphone image" />
+          <img class="search-svg" src="assets/search.png" alt="" />
+          <input
+            class="search-box"
+            type="text"
+            placeholder="Search Google or type a URL"
+            required
+          />
+        </div>
+
+        <div class="btn-container">
           <button class="button" type="submit">Google Search</button>
           <a href="https:www.google.com"
-            ><button type="button">I'm Feeling Lucky</button></a
+            ><button class="btn-auto-search" type="button">
+              I'm Feeling Lucky
+            </button></a
           >
         </div>
       </form>
